--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
                         <uri>https://anypoint.mulesoft.com</uri>
                         <provider>MC</provider>
                         <environment>${environment}</environment>
-                        <target>demo-private-space</target>
+                        <target>cc-mule-private-space</target>
                         <releaseChannel>LTS</releaseChannel>
                         <javaVersion>${javaVersion}</javaVersion>
                         <connectedAppClientId>${ClientId}</connectedAppClientId>
